# azure_devops_mcp_server

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  server.py
src/azure_devops_mcp/: client.py  config.py  pagination.py
src/azure_devops_mcp/auth/: __init__.py  oauth.py  pat.py
src/azure_devops_mcp/models/: artifacts.py  git.py  git_output.py
src/azure_devops_mcp/shared/: __init__.py  error.py
src/azure_devops_mcp/tools/: artifacts.py  git.py
test/: test_auth.py  test_client.py  test_error.py
test/tools/: test_git.py
