[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-devops-mcp"
version = "0.1.0"
description = "MCP server to access various services of Azure DevOps using LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "pydantic>=2.12.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "pre-commit>=4.5.1",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
plugin = ["pydantic.mypy"]
strict = true
